# Cross-platform-orthodox-GUI-file-manager

./: .gitignore  CMakeLists.txt  OS_project.pro  README.md  file_manager.pro  main.cpp  mainwidget.cpp  mainwidget.h  mainwidget.ui  mainwindow.ui  mainwindow.ui.autosave  tets.h
